# amr-ros-config

./: README.md
description/: CMakeLists.txt  README.md  package.xml
description/meshes/pioneer-lx/: pioneer-lx-plinth.bak.stl  pioneer-lx_hull.stl
description/models/: pioneer3at.blend
description/src/: publisher.cc  publisher3at.cc  publisher3dx.cc
description/urdf/: Makefile  check_xacro_urdf.sh  display-pioneer-lx-devil-with-joint-state-gui.launch  display-with-robotstate.launch  display-xacro-with-joint-state-gui.launch  display-xacro.launch  display.launch  display_urdf.rviz  gazebo.launch  materials.xacro  pioneer-lx-devil.urdf  pioneer-lx-devil.urdf.xacro  pioneer-lx.urdf  pioneer-lx.urdf.xacro  pioneer2dx.urdf.xml  pioneer3at.urdf  pioneer3at.urdf.xacro  pioneer3at.xacro  pioneer3at_body.xacro  pioneer3dx.urdf  pioneer3dx.urdf.xacro  pioneer3dx.xacro  pioneer3dx_body.xacro  pioneer3dx_orig.2.xacro  pioneer3dx_wheel.xacro  powerbot.urdf  powerbot.urdf.xacro  rviz.launch  seekurjr.urdf  seekurjr.urdf.xacro  state_publisher.launch  terabot-arm.urdf  terabot-arm.urdf.xacro  xacrodisplay.launch
gazebo/: .example_pioneer-lx.launch.swp  .pioneer-lx-control.yaml.swp  CMakeLists.txt  README.md  another.world  example-pioneer-lx-emptyworld.launch  example-pioneer-lx.launch  example-pioneer3at-emptyworld.launch  example-pioneer3at-moonworld.launch  example-pioneer3at-terrainworld.launch  example-pioneer3at-world.launch  example-pioneer3dx-emptyworld.launch  example-simple-ramp-world.launch  example-world.launch  example.launch  package.xml  pioneer-lx-control.yaml  pioneer-lx.sdf  pioneer3at.sdf  pioneer3dx.sdf  powerbot.sdf  simple-ramp.world  spawn-pioneer3at.launch  spawn.launch
gazebo/models/apollo15_landing_site_1000x1000/: model.sdf
gazebo/models/cinderblock2/: model.sdf
launch/: CMakeLists.txt  drive_rqt.perspective  jaco2-arm-emulated.launch  jaco2_arm.launch  messages.perspective  package.xml  pioneer-lx-manipulator-arms-emulated.launch  pioneer-lx-manipulator-arms-head.launch  rosaria+rviz.launch  rosaria.launch  rosaria.rviz  rosaria_rqt_example.perspective  rqt_node_graph.perspective  rqt_topics_services.perspective  rviz+urdf_state.launch  tf_view_rqt.perspective  topics.perspective  view-and-drive.viz.rviz
